Add new test case: second full algorithm